--- a/pacman/pyproject.toml
+++ b/pacman/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Juhanir <juhani.riisio@gmail.com>"]
 python = "^3.8"
 pygame = "^2.0.3"
 pygame-menu = "^4.1.5"
+invoke = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
