--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ invoke = "^1.6.0"
 pytest = "^6.2.5"
 flake8 = "^4.0.1"
 autopep8 = "^1.6.0"
+coverage = "^6.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
