--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,3 @@
 [run]
 source = src
-omit = src/**/__init__.py,src/tests/**,src/assets/**,src/index.py,src/constants.py
+omit = src/**/__init__.py,src/tests/**,src/assets/**,src/index.py,src/constants.py,src/game/menus/**
