--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,9 @@ invoke = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
-flake8 = "^4.0.1"
 autopep8 = "^1.6.0"
 coverage = "^6.1.2"
+pylint = "^2.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
