--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,11 @@
 [run]
 source = src
-omit = src/**/__init__.py,src/tests/**,src/assets/**,src/index.py,src/constants.py,src/game/menus/**
+omit = src/**/__init__.py,
+  src/db_connection.py,
+  src/init_db.py,
+  src/tests/**,
+  src/assets/**,
+  src/index.py,
+  src/constants.py,
+  src/game/menus/**,
+  src/game/sprites/**
